# Metatron

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  filters.rs  main.rs  scan.rs  tests.rs  types.rs
src/effects/: particles.js
src/services/: tauri.js
src/ui/: console.js  ignoredFolders.js  status.js
src/utils/: dom.js
